fixed code link buttons being finnicky

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -55,7 +55,7 @@ a {
             font-size: 200%;
         }
         
-        a{
+        button{
             font-size: 200%;
             color: $gray-darker;
         }
